frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: pants-fe-service
spec:
  selector:
    app: pants-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pants-fe-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pants-fe
  template:
    metadata:
      labels:
        app: pants-fe
    spec:
      containers:
        - name: pants-fe
          image: chickennight/pants-fe:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: my-docker-credentials
