web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: www.wordsketch.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pants-fe-service
                port:
                  number: 80
    - host: api.wordsketch.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pants-be-service
                port:
                  number: 80
  tls:
    - hosts:
        - www.wordsketch.site
        - api.wordsketch.site
      secretName: web-tls
